<ScrollView
    android:id="@+id/scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cb="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">
<RelativeLayout
    android:id="@+id/big_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/MaterialTealPrimary">
        <TextView
            android:id="@+id/main_text"
            android:text="@string/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"/>
        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_margin="8dp"
            android:layout_below="@id/main_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="24sp"
                android:textColor="@color/White"
                android:fontFamily="sans-serif-light"
                android:text="@string/instr"/>
            <EditText
                android:id="@+id/weightInput"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:maxLength="10"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_below="@id/linlay1"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/lbs"
                android:text="@string/lbs"
                android:textColor="@color/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/kg"
                android:text="@string/kg"
                android:textColor="@color/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/results_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rel1"
        android:background="@android:color/transparent"
        android:animateLayoutChanges="true">
        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/animalPicture"
            android:scaleType="fitXY"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentTop="true"/>
        <TextView
            android:id="@+id/results"
            android:text="@string/blank"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/animalPicture"/>
        <TextView
            android:id="@+id/future"
            android:text="@string/blank"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/White"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/results"/>
        </RelativeLayout>
    <at.markushi.ui.CircleButton
        android:id="@+id/button"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:onClick="AnimalLift"
        cb:cb_color="@color/MaterialAmberPrimary"
        android:src="@drawable/ic_action_go"/>
</RelativeLayout>
</ScrollView>
